fix map from overflowing onto footer

--- a/app/assets/stylesheets/modules/_container.scss
+++ b/app/assets/stylesheets/modules/_container.scss
@@ -46,6 +46,10 @@
   z-index:0;
 }
 
+.container-map-index {
+  padding-bottom: 5%;
+}
+
 .container-like-button{
   overflow: hidden;
   position: relative;
